Streamed attempts
