# api/chartgpt.py
@@ -20,14 +20,14 @@ import plotly
 import plotly.graph_objs as go
 # Override Streamlit styling
 import plotly.io as pio
-from chartgpt_client import ApiRequestAskChartgptRequest as Request
-from chartgpt_client import Attempt, Output, OutputType
+from chartgpt_client import Request, Attempt, Error, Output, OutputType
 from google.cloud import bigquery
 from IPython.core.interactiveshell import ExecutionResult, InteractiveShell
 from IPython.utils import io
 from plotly.graph_objs import Figure
 from typeguard import TypeCheckError, check_type, typechecked
 from google.api_core.exceptions import InternalServerError
+from api import utils
 
 from api.config import GPT_TEMPERATURE, PYTHON_GPT_MODEL, SQL_GPT_MODEL
 from api.connectors.bigquery import bigquery_client
@@ -43,7 +43,7 @@ from api.types import (  # Request,; Attempt,; Output,; AnyOutputType,
     assert_matches_accepted_type, map_type_to_output_type,
     Role, Message
 )
-from api.utils import apply_lower_to_where, get_tables_summary
+from api.utils import apply_lower_to_where, get_tables_summary, clean_jupyter_shell_output
 from api.security.secure_ast import assert_secure_code
 from api.logging import logger
 
@@ -182,9 +182,9 @@ def generate_valid_sql_query(
     query: str,
     description: str,
     messages: List[dict],
-    attempts: int = 0,
+    attempts: List[Attempt] = [],
     config: SQLQueryGenerationConfig = SQLQueryGenerationConfig(),
-) -> SQLExecutionResult:
+) -> Iterator[Union[Attempt, SQLExecutionResult]]:
     query = apply_lower_to_where(query)
     errors = validate_sql_query(query=query)
     df = pd.DataFrame()
@@ -197,7 +197,7 @@ def generate_valid_sql_query(
         except Exception as e:
             errors.append(str(e))
 
-    if errors and attempts < config.max_attempts:
+    if errors and len(attempts) <= config.max_attempts:
         log_errors_and_attempts(query, errors, attempts, config.max_attempts)
 
         messages.append(
@@ -227,15 +227,39 @@ def generate_valid_sql_query(
 
         messages.append(message)
 
-        return generate_valid_sql_query(
+        created_at = int(time.time())
+        attempt = Attempt(
+            index=len(attempts),
+            created_at=created_at,
+            outputs=[
+                Output(
+                    index=0,
+                    created_at=created_at,
+                    description=description,
+                    type=OutputType.SQL_QUERY.value,
+                    value=query,
+                )
+            ],
+            errors=[
+                Error(
+                    index=index,
+                    created_at=created_at,
+                    type="SQLValidationError",
+                    value=error,
+                ) for index, error in enumerate(errors)
+            ]
+        )
+        attempts.append(attempt)
+        yield attempt
+        yield from generate_valid_sql_query(
             query=updated_query,
             description=updated_description,
             messages=messages,
-            attempts=attempts + 1,
+            attempts=attempts,
             config=config
         )
     else:
-        return SQLExecutionResult(
+        yield SQLExecutionResult(
             description=description,
             query=query,
             dataframe=df,
@@ -246,7 +270,7 @@ def generate_valid_sql_query(
 def log_errors_and_attempts(query, errors, attempts, max_attempts):
     logger.debug(f"Query: {query}")
     logger.debug(f"Errors in query: {errors}")
-    logger.debug(f"Attempt: {attempts} of {max_attempts}")
+    logger.debug(f"Attempt: {len(attempts)} of {max_attempts}")
 
 
 def execute_sql_query(query: str) -> pd.DataFrame:
@@ -264,19 +288,19 @@ def execute_sql_query(query: str) -> pd.DataFrame:
 def get_valid_sql_query(
     messages: List[Message],
     config: SQLQueryGenerationConfig
-) -> SQLExecutionResult:
+) -> Iterator[Union[Attempt, SQLExecutionResult]]:
     initial_description, initial_query = get_initial_sql_query(messages)
     log_initial_queries(initial_description, initial_query)
 
     if not config.assert_results_not_empty and not initial_query:
-        return SQLExecutionResult(
+        yield SQLExecutionResult(
             description=initial_description,
             query=initial_query,
             dataframe=pd.DataFrame(),
             messages=messages,
         )
     else:
-        return generate_valid_sql_query(
+        yield from generate_valid_sql_query(
             query=initial_query,
             description=initial_description,
             messages=messages,
@@ -380,15 +404,19 @@ def execute_python_code(
                 )
                 function_result.raise_error()
 
-        output = captured.stdout
-        result = (
-            execution_result.result
-            or shell.user_ns.get(config.output_variable)
-            or (function_result.result if function_result else None)
-        )
+        output = clean_jupyter_shell_output(captured.stdout, remove_final_result=True)
 
-        if result:
-            logger.debug(f"Result: {result}")
+        if function_result and function_result.result is not None:
+            result = function_result.result
+        elif execution_result.result is not None:
+            result = execution_result.result
+        elif config.output_variable in shell.user_ns and shell.user_ns[config.output_variable] is not None:
+            result = shell.user_ns[config.output_variable]
+        else:
+            result = None
+
+        if result is not None:
+            logger.debug(f"Result: {str(result)[:100]}")
             try:
                 # check_type(result, config.output_type)
                 assert_matches_accepted_type(result, config.output_type)
@@ -444,13 +472,13 @@ def generate_valid_python_code(
     messages: List[Message],
     local_variables=None,
     config: CodeGenerationConfig = CodeGenerationConfig(),
-) -> PythonExecutionResult:
+) -> Iterator[Union[Attempt, PythonExecutionResult]]:
     docstring, code = get_initial_python_code(messages)
     logger.debug(f"Initial Python code docstring:\n{docstring}")
     logger.debug(f"Initial Python code:\n{code}")
 
     result: PythonExecutionResult = PythonExecutionResult()
-    for attempt in range(config.max_attempts):
+    for attempt_index in range(config.max_attempts):
         local_variables["df"] = local_variables["df"].copy()
 
         result: PythonExecutionResult = execute_python_code(
@@ -462,11 +490,34 @@ def generate_valid_python_code(
         )
 
         if result.error:
-            logger.warning(f"Attempt: {attempt + 1} of {config.max_attempts}")
+            logger.warning(f"Attempt: {attempt_index + 1} of {config.max_attempts}")
             logger.warning(f"Error in code: {result.error}")
             logger.warning(f"Code:\n{code}")
+            
+            yield Attempt(
+                index=attempt_index,
+                created_at=int(time.time()),
+                outputs=[
+                    Output(
+                        index=0,
+                        created_at=int(time.time()),
+                        description=docstring,
+                        type=OutputType.PYTHON_CODE.value,
+                        value=code,
+                    )
+                ],
+                errors=[
+                    Error(
+                        index=0,
+                        created_at=int(time.time()),
+                        type="PythonExecutionError",
+                        value=result.error,
+                    )
+                ],
+            )
+
             error_prompt = CODE_GENERATION_ERROR_PROMPT_TEMPLATE.format(
-                attempt=attempt + 1, code=code, error_message=result.error
+                attempt=attempt_index + 1, code=code, error_message=result.error
             )
             messages.append({"role": "user", "content": inspect.cleandoc(error_prompt)})
             response = openai_chat_completion(
@@ -482,15 +533,16 @@ def generate_valid_python_code(
             _, docstring, code = extract_code_generation_response_data(response)
         else:
             result.messages = messages
-            return result
+            yield result
+            break
     result.messages = messages
-    return result
+    yield result
 
 
 def answer_user_query(
     request: Request,
-) -> Iterator[Union[Output, QueryResult]]:  # When streaming, returns partial Output
-    stream = request.stream
+    stream=False,
+) -> Iterator[Union[Attempt, Output, QueryResult]]:  # When streaming, returns partial Output
     logger.debug(request)
 
     tables_summary = get_tables_summary(
@@ -534,13 +586,24 @@ def answer_user_query(
         },
     ]
 
-    sql_generation_result: SQLExecutionResult = get_valid_sql_query(
+    sql_query_attempts = []
+    for result in get_valid_sql_query(
         messages=messages,
         config=SQLQueryGenerationConfig(
             data_source_url=request.data_source_url,
             assert_results_not_empty=False,
         ),
-    )
+    ):
+        if isinstance(result, Attempt):
+            sql_query_attempts.append(result)
+            print("Attempt:", result)
+            if stream:
+                yield result
+        elif isinstance(result, SQLExecutionResult):
+            sql_generation_result: SQLExecutionResult = result
+        else:
+            raise ValueError("Invalid SQL execution result type")
+
     df = sql_generation_result.dataframe
     log_final_queries(sql_generation_result.description, sql_generation_result.query)
 
@@ -552,6 +615,8 @@ def answer_user_query(
             if pd.api.types.is_period_dtype(df[col])
         }
     )
+    # Sort DataFrame by date column if it exists
+    df = utils.sort_dataframe(df)
 
     outputs = []
     output_0 = Output(
@@ -564,23 +629,26 @@ def answer_user_query(
     output_1 = Output(
         index=1,
         created_at=int(time.time()),
-        description="",
+        description="Table sample rows",
         type=OutputType.PANDAS_DATAFRAME.value,
         # value=base64.b64encode(pickle.dumps(df)).decode("utf-8"),
         value=pd.concat([df.head(5), df.tail(5)]).to_json(orient='records'),
     )
 
     if stream:
-        yield output_0
+        yield QueryResult(
+            data_source=request.data_source_url,
+            output_type=request.output_type,
+            attempts=sql_query_attempts,
+            errors=[],
+            outputs=[output_0],
+        )
         yield output_1
     else:
         outputs += [output_0, output_1]
 
     try:
-        df_summary = {
-            column_name: f"{sample}: {dtype}"
-            for column_name, sample, dtype in zip(df.columns, df.iloc[0], df.dtypes)
-        }
+        df_summary = utils.get_dataframe_summary(df)
     except IndexError:
         df_summary = "DataFrame is empty"
 
@@ -640,14 +708,24 @@ def answer_user_query(
         },
     ]
 
-    code_generation_result: PythonExecutionResult = generate_valid_python_code(
+    python_execution_attempts = []
+    for result in generate_valid_python_code(
         messages=sql_generation_result.messages,
         local_variables={"df": df.copy()},
         config=CodeGenerationConfig(
             output_type=output_type,
             output_variable=output_variable,
         ),
-    )
+    ):
+        if isinstance(result, Attempt):
+            python_execution_attempts.append(result)
+            if stream:
+                yield result
+        elif isinstance(result, PythonExecutionResult):
+            code_generation_result: PythonExecutionResult = result
+        else:
+            raise ValueError("Invalid Python execution result type")
+
     logger.debug(f"Valid Python code:\n{code_generation_result.code}")
 
     Figure.show = original_show_method
@@ -668,11 +746,17 @@ def answer_user_query(
         created_at=created_at,
         description="",
         type=OutputType.PYTHON_OUTPUT.value,
-        value=str(re.sub(r'^Out\[\d+\]:\s*', '', code_generation_result.io)),
+        value=code_generation_result.io,
     )
 
     if stream:
-        yield output_2
+        yield QueryResult(
+            data_source=request.data_source_url,
+            output_type=request.output_type,
+            attempts=python_execution_attempts,
+            errors=[],
+            outputs=[output_2],
+        )
         yield output_3
     else:
         outputs += [output_2, output_3]
@@ -691,7 +775,9 @@ def answer_user_query(
             _output = item.to_json()
         elif _type == OutputType.PANDAS_DATAFRAME:
             n = 5
-            result = pd.concat([df.head(n), df.tail(n)])
+            # Determine the start index for the tail slice
+            tail_start = max(n, len(df) - n)
+            result = pd.concat([df.iloc[:n], df.iloc[tail_start:]])
             _output = result.to_json(orient='records')
         else:
             _output = str(item)
@@ -729,7 +815,7 @@ def answer_user_query(
         yield QueryResult(
             data_source="",
             output_type=request.output_type,
-            attempts=[],
+            attempts=sql_query_attempts + python_execution_attempts,
             errors=[],
             outputs=outputs,
         )
