# api/openapi/openapi_v1.yaml
@@ -19,50 +19,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                messages:
-                  type: array
-                  description: "The messages based on which the response will be generated."
-                  items:
-                    type: object
-                    description: "The message based on which the response will be generated."
-                    properties:
-                      id:
-                        type: string
-                        description: "The ID of the message."
-                      created_at:
-                        type: integer
-                        description: "The timestamp of when the message was created."
-                      content:
-                        type: string
-                        description: "The content of the message."
-                      role:
-                        $ref: '#/components/schemas/Role'
-                data_source_url:
-                  type: string
-                  description: "The data source URL based on which the response will be generated. The entity is optional. If not specified, the default data source will be used."
-                  pattern: "^(?:([a-z]+)/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)(?:/([a-zA-Z0-9_-]+))?)?$"
-                  example: "data_source/project/collection/entity"
-                  default: ""
-                output_type:
-                  $ref: '#/components/schemas/OutputType'
-                max_outputs:
-                  type: integer
-                  description: "The maximum number of outputs to generate."
-                  default: 10
-                max_attempts:
-                  type: integer
-                  description: "The maximum number of attempts to generate an output."
-                  default: 10
-                max_tokens:
-                  type: integer
-                  description: "The maximum number of tokens to use for generating an output."
-                  default: 10
-                stream:
-                  type: boolean
-                  description: "Whether to stream the response."
-                  default: false
+              '$ref': '#/components/schemas/Request'
       responses:
         '200':
           description: "Successful response"
@@ -70,11 +27,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Response'
-                # oneOf:
-                # - $ref: '#/components/schemas/Response'
-                # - type: string
-                #   description: "Raw streaming data as string"
-                # type: object
+        '400':
+          description: "Bad request"
+        '401':
+          $ref: "#/components/responses/UnauthorizedError"
+        '500':
+          description: "Internal server error"
+  /v1/ask_chartgpt/stream:
+    post:
+      summary: "Ask ChartGPT a question"
+      description: "This endpoint takes a question and returns a streamed response."
+      operationId: api.request.ask_chartgpt_stream
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              '$ref': '#/components/schemas/Request'
+      responses:
+        '200':
+          description: "Successful response"
+          content:
+            text/event-stream:
+              schema:
+                type: string
+                description: "Streaming JSON data delimited by `data: ` and `<end>\n`"
         '400':
           description: "Bad request"
         '401':
@@ -102,6 +79,51 @@ components:
           schema:
             type: string
   schemas:
+    Request:
+      type: object
+      properties:
+        messages:
+          type: array
+          description: "The messages based on which the response will be generated."
+          items:
+            type: object
+            description: "The message based on which the response will be generated."
+            properties:
+              id:
+                type: string
+                description: "The ID of the message."
+              created_at:
+                type: integer
+                description: "The timestamp of when the message was created."
+              content:
+                type: string
+                description: "The content of the message."
+              role:
+                $ref: '#/components/schemas/Role'
+        data_source_url:
+          type: string
+          description: "The data source URL based on which the response will be generated. The entity is optional. If not specified, the default data source will be used."
+          pattern: "^(?:([a-z]+)/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)(?:/([a-zA-Z0-9_-]+))?)?$"
+          example: "data_source/project/collection/entity"
+          default: ""
+        output_type:
+          $ref: '#/components/schemas/OutputType'
+        max_outputs:
+          type: integer
+          description: "The maximum number of outputs to generate."
+          default: 10
+        max_attempts:
+          type: integer
+          description: "The maximum number of attempts to generate an output."
+          default: 10
+        max_tokens:
+          type: integer
+          description: "The maximum number of tokens to use for generating an output."
+          default: 10
+        # stream:
+        #   type: boolean
+        #   description: "Whether to stream the response."
+        #   default: false
     Response:
       type: object
       # TODO Determine which parameters should always be required
